--- a/listings/templates/listings/property_list.html
+++ b/listings/templates/listings/property_list.html
@@ -1,38 +1,50 @@
-{% extends "base_bootstrap.html" %}
-{% block content %}
-<h1>Accomodations</h1>
-<p>
-{% if property_list %}
-<ul>
-  {% for property in property_list %}
-    <li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Property Listings</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'listings/main_style.css' %}">
+</head>
+<body>
+    <div class="container">
+        {% block content %}
+        <h1>Accommodations</h1>
+        {% if property_list %}
+        <div class="property-grid">
+          {% for property in property_list %}
+            <div class="property-item">
+                <p><strong>{{ property.title }}</strong></p>
+                <p>{{ property.address }}</p>
+                <p>{{ property.contact_1 }}</p>
+                <div class="property-actions">   
+                    {% if property.owner == user %}
+                       (<a href="{% url 'listings:update' property.id %}">Edit</a> |
+                       <a href="{% url 'listings:delete' property.id %}">Delete</a>)
+                    {% endif %} 
+                </div>
+            </div>
+          {% endfor %}
+        </div>
+        {% else %}
+          <p>There are no properties in the database.</p>
+        {% endif %}
+        <a href="{% url 'listings:create' %}" class="add-accommodation">Add an Accommodation</a>
+        <div class="login-logout">
+            {% if user.is_authenticated %}
+       
+		<form method="post" action="{% url 'logout' %}?next={% url 'listings:all' %}">
+                    {% csrf_token %}
+                    <button type="submit">logout</button>
+                </form>
 
-	<ul>
-		<li> {{ property.title }} </li>
-		<li> {{ property.address }} </li>
-		<li> {{ property.contact_1 }} </li>
-
-                <li>   {% if property.owner == user %}
-                           (<a href="{% url 'listings:update' property.id %}">Edit</a> |
-                           <a href="{% url 'listings:delete' property.id %}">Delete</a>)
-                       {% endif %} 
-                 </li>
-        </ul>
-        
-    </li>
-    <p></p>
-  {% endfor %}
-</ul>
-{% else %}
-  <p>There are no properties in the database.</p>
-{% endif %}
-</p>
-<p>
-<a href="{% url 'listings:create' %}">Add an Accomodation</a> |
-{% if user.is_authenticated %}
-<a href="{% url 'logout' %}?next={% url 'listings:all' %}">Logout</a>
-{% else %}
-<a href="{% url 'login' %}?next={% url 'listings:all' %}">Login</a>
-{% endif %}
-</p>
+            {% else %}
+           
+                  <a href="{% url 'login' %}?next={% url 'listings:all' %}">Login</a>
+            
+	     {% endif %}
+        </div>
+       </div>
+    </body>
 {% endblock %}
