--- a/listings/templates/listings/property_list.html
+++ b/listings/templates/listings/property_list.html
@@ -42,7 +42,7 @@
             {% else %}
            
                   <a href="{% url 'login' %}?next={% url 'listings:all' %}">Login</a>
-            
+                  <a href="{% url 'user:signup' %}">Sign Up</a>
 	     {% endif %}
         </div>
        </div>
