--- a/listings/templates/registration/login.html
+++ b/listings/templates/registration/login.html
@@ -1,12 +1,13 @@
+{% extends "base_bootstrap.html" %}
 {% block content %}
 
    {% if form.errors %}
       <p>Your username and password didn't match. Please try again.</p>
    {% endif %}
-
+    {% load crispy_forms_tags %}
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <input type="submit" class="btn btn-primary" value="Login" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
