--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -6,12 +6,16 @@
             &#9776; <!-- Unicode character for menu icon -->
         </button>
         <ul class="navbar-menu" id="navbar-menu">
-            <li class="navbar-item"><a href="#">Home</a></li>
+            <li class="navbar-item"><a href={% url 'listings:all' %}>Home</a></li>
             <li class="navbar-item"><a href="#">About</a></li>
-            <li class="navbar-item"><a href="#">Listings</a></li>
-            <li class="navbar-item"><a href="#">Contact</a></li>
+            <li class="navbar-item"><a href={% url 'listings:all' %}>Listings</a></li>
             {% if user.is_authenticated %}
-            <li class="navbar-item"><a href="{% url 'logout' %}?next={% url 'listings:all' %}">Logout</a></li>
+
+               <form method="post" action="{% url 'logout' %}?next={% url 'listings:all' %}">
+                    {% csrf_token %}
+                    <button class = "navbar-item" type="submit">logout</button>
+                </form>
+            
             {% else %}
             <li class="navbar-item"><a href="{% url 'login' %}?next={% url 'listings:all' %}">Login</a></li>
             <li class="navbar-item"><a href="{% url 'user:signup' %}">Sign Up</a></li>
