--- a/listings/templates/registration/login.html
+++ b/listings/templates/registration/login.html
@@ -1,6 +1,13 @@
-{% extends "base_bootstrap.html" %}
-{% block content %}
+{% load static %}
 
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">   
+</head>
+     {% include 'navbar.html' %}
+{% block content %}
+   
+ 
    {% if form.errors %}
       <p>Your username and password didn't match. Please try again.</p>
    {% endif %}
@@ -12,6 +19,8 @@
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
 
+    <script src={% static "js/navbar.js" %} ></script>
+ 
 {% endblock %}
 
 
