--- a/listings/templates/registration/login.html
+++ b/listings/templates/registration/login.html
@@ -1,6 +1,8 @@
 {% load static %}
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">   
 </head>
