--- a/user/templates/user/signup_form.html
+++ b/user/templates/user/signup_form.html
@@ -1,6 +1,8 @@
 {% load static %}
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/sign_up.css' %}">
 <head>
