--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -1,14 +1,15 @@
 <!-- navbar.html -->
 <nav class="navbar">
     <div class="navbar-container">
-        <a href="#" class="navbar-logo">Property Listings</a>
+        <a href="#" class="navbar-logo">KU Rooms</a>
         <button class="navbar-toggle" id="navbar-toggle">
             &#9776; <!-- Unicode character for menu icon -->
         </button>
         <ul class="navbar-menu" id="navbar-menu">
             <li class="navbar-item"><a href={% url 'listings:all' %}>Home</a></li>
             <li class="navbar-item"><a href="#">About</a></li>
-            <li class="navbar-item"><a href={% url 'listings:all' %}>Listings</a></li>
+            <li class="navbar-item"><a href={% url 'listings:all' %}>Rooms</a></li>
+            <li class="navbar-item"><a href={% url 'user:all' %}>My Rooms</a></li> 
             {% if user.is_authenticated %}
 
                <form method="post" action="{% url 'logout' %}?next={% url 'listings:all' %}">
@@ -17,7 +18,7 @@
                 </form>
             
             {% else %}
-            <li class="navbar-item"><a href="{% url 'login' %}?next={% url 'listings:all' %}">Login</a></li>
+            <li class="navbar-item"><a href="{% url 'login' %}?next={% url 'user:all' %}">Login</a></li>
             <li class="navbar-item"><a href="{% url 'user:signup' %}">Sign Up</a></li>
             {% endif %}
         </ul>
