--- a/listings/templates/listings/property_confirm_delete.html
+++ b/listings/templates/listings/property_confirm_delete.html
@@ -1,9 +1,9 @@
 {% extends "base_bootstrap.html" %}
 {% block content %}
 
-   <h1>Delete Review</h1>
+   <h1>Delete Listing</h1>
 
-   <p>Are you sure you want to delete review: {{property}}?? </p>
+   <p>Are you sure you want to delete listing: {{property}}?? </p>
 
    <form action="", method="post">
 	{% csrf_token %}
