--- a/listings/templates/listings/property_form.html
+++ b/listings/templates/listings/property_form.html
@@ -20,7 +20,7 @@
     			{{ form|crispy }}
                            
     			<input type="submit" value="Submit">
-    			<input type="submit" value="Cancel" onclick="window.location.href='{% url 'listings:all' %}';return false;">
+    			<input type="submit" value="Cancel" onclick="window.location.href='{% url 'user:all' %}';return false;">
   		</form>
 	</p>
 
