--- a/user/templates/user/dashboard.html
+++ b/user/templates/user/dashboard.html
@@ -44,7 +44,7 @@
             {% endfor %}
         </div>
         {% else %}
-        <p>There are no properties in the database.</p>
+        <p>Rooms that you register will appear here.</p>
         {% endif %}
         <a href="{% url 'listings:create' %}" class="add-accommodation fixed-bottom">Add an Accommodation</a>
     </div>
