--- a/listings/templates/listings/property_form.html
+++ b/listings/templates/listings/property_form.html
@@ -15,7 +15,7 @@
 
 	<p>
   		{% load crispy_forms_tags %}
- 		<form action="" method="post">
+ 		<form action="" method="post" enctype="multipart/form-data">
     			{% csrf_token %}
     			{{ form|crispy }}
                            
