--- a/home/static/css/property_list.css
+++ b/home/static/css/property_list.css
@@ -85,6 +85,16 @@ body {
     margin-bottom: 5px;
 }
 
+.property-status {
+    font-size: 1em;
+    font-family: 'Arial', sans-serif;
+    color: #FFFAF0;
+    background-color: #696969;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
 .property-type {
     font-size: 1em;
     font-family: 'Arial', sans-serif;
